@@ -5,18 +5,12 @@ If you liked the modulebuilder module and thanks to the long process for giving 
 
 # ModuleBuilder version 3.x
 
-[![Build Status](https://scrutinizer-ci.com/g/txmodxoops/modulebuilder/badges/build.png?b=master)](https://travis-ci.org/txmodxoops/modulebuilder)
-[![Jenkins coverage](https://img.shields.io/jenkins/c/https/jenkins.qa.ubuntu.com/address-book-service-utopic-i386-ci.svg)](https://github.com/txmodxoops/modulebuilder)
+[![Build Status](https://scrutinizer-ci.com/g/ggoffy/modulebuilder/badges/build.png?b=master)](https://travis-ci.org/ggoffy/modulebuilder)
+[![Jenkins coverage](https://img.shields.io/jenkins/c/https/jenkins.qa.ubuntu.com/address-book-service-utopic-i386-ci.svg)](https://github.com/XoopsModules25x/modulebuilder)
 [![Software License](https://img.shields.io/badge/license-GPL-brightgreen.svg?style=flat)](docs/license.txt)
-[![Quality Score](https://img.shields.io/scrutinizer/g/txmodxoops/modulebuilder.svg?style=flat)](https://scrutinizer-ci.com/g/txmodxoops/modulebuilder)
-[![Gem](https://img.shields.io/gem/dt/rails.svg)](txmodxoops/modulebuilder)
-[![Latest Version](https://img.shields.io/github/release/txmodxoops/modulebuilder.svg?style=flat)](https://github.com/txmodxoops/ModuleBuilder-1.91/releases/latest)
-
-<p>
-<a href="http://issuestats.com/github/txmodxoops/modulebuilder"><img alt="Issue Stats" src="http://issuestats.com/github/txmodxoops/modulebuilder/badge/pr?style=flat"></a>
-<a href="http://issuestats.com/github/txmodxoops/modulebuilder"><img alt="Issue Stats" src="http://issuestats.com/github/txmodxoops/modulebuilder/badge/issue?style=flat"></a>
-<!--[![Github Releases (by Release)](https://img.shields.io/badge/modulebuilder-alpha%203.2-green.svg)](https://github.com/txmodxoops/modulebuilder/tree/alpha-3-4)-->
-</p>
+[![Quality Score](https://img.shields.io/scrutinizer/g/ggoffy/modulebuilder.svg?style=flat)](https://scrutinizer-ci.com/g/ggoffy/modulebuilder)
+[![Gem](https://img.shields.io/gem/dt/rails.svg)](XoopsModules25x/modulebuilder)
+[![Latest Version](https://img.shields.io/github/release/XoopsModules25x/modulebuilder.svg?style=flat)](https://github.com/XoopsModules25x/modulebuilder/releases/latest)
 
 > **Note:** This repository contains the code of the modulebuilder module
 It's under development currently. If you want to build with developers this version of module or create a base modules, you can use the last version of this module at [Txmod XOOPS Web Site](http://www.txmodxoops.org), and visit the main discussion forum at [XOOPS Web Site](https://xoops.org/modules/newbb/viewtopic.php?topic_id=76746) for more information.
@@ -61,11 +55,16 @@ Apache = 2.4.10, 2.4.18
 XOOPS = 2.5.11
 
 Codeception = 2.0.13
+
 Selenium IDE = 2.9.0
 
-[![Stories in Ready](https://badge.waffle.io/txmodxoops/modulebuilder.svg?label=ready&title=Ready)](http://waffle.io/txmodxoops/modulebuilder)
-[![Stories in Work in Progress](https://badge.waffle.io/txmodxoops/modulebuilder.svg?label=Work in Progress&title=Work in Progress)](http://waffle.io/txmodxoops/modulebuilder)
-[![Stories in Done](https://badge.waffle.io/txmodxoops/modulebuilder.svg?label=done&title=Done)](http://waffle.io/txmodxoops/modulebuilder)
-[![Stories in Roadmap](https://badge.waffle.io/txmodxoops/modulebuilder.svg?label=roadmap&title=Roadmap)](http://waffle.io/txmodxoops/modulebuilder)
+#### Tutorial:
+[![Tutorial Available](https://xoops.org/images/tutorial-available-blue.svg)](https://xoops.gitbook.io/modulebuilder-tutorial/) Tutorial: coming soon on [GitBook](https://xoops.gitbook.io/modulebuilder-tutorial/).
+To contribute to the Tutorial, [fork it on GitHub](https://github.com/XoopsDocs/modulebuilder-tutorial)
 
-[![Throughput Graph](https://graphs.waffle.io/txmodxoops/modulebuilder/throughput.svg)](https://waffle.io/txmodxoops/modulebuilder/metrics)
+#### Translation:
+[![Translations on Transifex](https://xoops.org/images/translations-transifex-blue.svg)](https://www.transifex.com/xoops)
+
+Please visit us on https://xoops.org
+
+Current and upcoming "next generation" versions of XOOPS CMS are being crafted on GitHub at: https://github.com/XOOPS
