@@ -24,9 +24,9 @@
 $moduleDirName      = \basename(__DIR__);
 $moduleDirNameUpper = \mb_strtoupper($moduleDirName);
 
-$modversion['version']             = 3.03;
-$modversion['module_status']       = 'Alpha 5';
-$modversion['release_date']        = '2020/05/11';
+$modversion['version']             = 3.04;
+$modversion['module_status']       = 'Final';
+$modversion['release_date']        = '2020/11/11';
 $modversion['name']                = _MI_MODULEBUILDER_NAME;
 $modversion['description']         = _MI_MODULEBUILDER_DESC;
 $modversion['author']              = 'Xoops TDM';
@@ -51,17 +51,17 @@ $modversion['sysicons32']     = '../../Frameworks/moduleclasses/icons/32';
 $modversion['modicons16']          = 'assets/images/icons/16';
 $modversion['modicons32']          = 'assets/images/icons/32';
 $modversion['targetdir']           = XOOPS_UPLOAD_PATH . "/{$moduleDirName}/repository/";
-$modversion['module_website_url']  = 'https://github.com/txmodxoops/modulebuilder-1.91';
-$modversion['module_website_name'] = 'GitHub Txmodx Xoops';
-$modversion['min_php']             = '7.0';
-$modversion['min_xoops']           = '2.5.9';
+$modversion['module_website_url']  = 'https://github.com/XoopsModules25x/modulebuilder';
+$modversion['module_website_name'] = 'GitHub Xoops';
+$modversion['min_php']             = '7.2';
+$modversion['min_xoops']           = '2.5.11';
 $modversion['min_admin']           = '1.2';
 $modversion['min_db']              = ['mysql' => '5.5'];
 //about
 $modversion['demo_site_url']       = 'https://xoops.org/';
 $modversion['demo_site_name']      = 'Xoops TDM';
-$modversion['forum_site_url']      = 'https://xoops.org/modules/newbb/viewtopic.php?post_id=358118';
-$modversion['forum_site_name']     = 'ModuleBuilder 1.91 alpha for Testing';
+$modversion['forum_site_url']      = 'https://xoops.org/modules/newbb/viewtopic.php?post_id=365223';
+$modversion['forum_site_name']     = 'ModuleBuilder 3.03 for Testing';
 $modversion['module_website_name'] = 'Xoops TDM';
 // Admin things
 $modversion['system_menu'] = 1;
